tests/data/checker_if_block_copy_paste/good/1.php
<?php
/**
 *
 * @author k.vagin
 */

function a($a)
{
	if ($a == 1) $b = 2;
	if ($a == 2) $b = 20;
	if ($a == 4) $b = 0;
}